# pysonolus

./: .gitignore  profile.html  pyproject.toml
src/pysonolus/: __init__.py  anonymous.py  inspect.py  post_init.py  typings.py  utils.py
src/pysonolus/compiler/: __init__.py  compile.py  context.py  core.py  function.py  pre_compiled.py
src/pysonolus/functions/: __init__.py  debug.py  easing.py  engine.py  judge.py  math.py  random.py
src/pysonolus/node/: IR.py  __init__.py  dispatch.py  flattened.py  flow.py  transform.py
src/pysonolus/optimizer/: __init__.py  analyze.py  constant.py  core.py  elimination.py  execute.py  switch.py  variable.py
src/pysonolus/pointer/: blocks.py  core.py
